# Job-app

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: config.py  matcher.py  scraper.py  tracker.py
data/resumes/: Industry.txt  Research.txt
